# CreditScoringDashboard

./: Procfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
creditscoringdashboard/: aux_func.py
data/: input_information.csv
streamlit/: dashboard.py
