[tool.poetry]
name = "creditscoringdashboard"
version = "0.1.0"
description = ""
authors = ["Nicolas CUERVO <Nicolas.Cuervo.R@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.39.0"
numpy = "^2.1.2"
pydantic = "^2.9.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
