[tool.poetry]
name = "creditscoringdashboard"
version = "0.1.0"
description = ""
authors = ["Nicolas CUERVO <Nicolas.Cuervo.R@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.39.0"
numpy = "2.0.0"
pydantic = "^2.9.2"
matplotlib = "^3.9.2"
shap = "^0.46.0"
streamlit-shap = "^1.0.2"
projet07 = {git = "https://github.com/nicolascuervo/CreditScoring.git"}
python-dotenv = "^1.0.1"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
